Tu mensaje descriptivo aquí

--- a/index.html
+++ b/index.html
@@ -5,25 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <!-- Meta Tags para SEO -->
-  <title>Cartas de Amor Interactivas ❤️ - Notas y Mensajes Románticas Digitales</title>
-  <meta name="description" content="Expresa tu amor con hermosas cartas de amor digitales interactivas. Arrastra, rota y personaliza notas románticas con fotos y mensajes sinceros. Perfecto para Día de San Valentín, aniversarios o cualquier ocasión romántica.">
-  <meta name="keywords" content="cartas de amor, mensajes románticos, tarjetas interactivas, día de san valentín, romance digital, notas de amor, sitio web romántico, regalos de aniversario, mensajes personalizados">
-  <meta name="author" content="Cartas de Amor Interactivas">
-  <meta name="robots" content="index, follow">
+  <title>Feliz san valentin amor ❤️ - Hagamos lo que tu quieras</title>
+  <meta name="description" content="Perdona lo de esta mañana">
+  <meta name="keywords" content="Estaba un poco irritao por la falta de sueño">
+  <meta name="author" content="TE AMO">
+
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="">
-  <meta property="og:title" content="Cartas de Amor Interactivas ❤️ - Notas Románticas Digitales">
-  <meta property="og:description" content="Crea y comparte hermosas cartas de amor interactivas con fotos y mensajes sinceros. Perfecto para expresar tus sentimientos de una manera digital única.">
+  <title>Feliz san valentin amor ❤️ - Hagamos lo que tu quieras</title>
+  <meta name="description" content="Perdona lo de esta mañana">
+  <meta name="keywords" content="Estaba un poco irritao por la falta de sueño">
+  <meta name="author" content="TE AMO">
   <meta property="og:image" content="images/og-image.jpg">
   
-  <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="">
-  <meta property="twitter:title" content="Cartas de Amor Interactivas ❤️ - Notas Románticas Digitales">
-  <meta property="twitter:description" content="Crea y comparte hermosas cartas de amor interactivas con fotos y mensajes sinceros.">
-  <meta property="twitter:image" content="images/twitter-image.jpg">
   
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>❤️</text></svg>">
